--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player/state_machine/PlayerState.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scenes/", "res://scenes/player/", "res://scenes/player/state_machine/", "res://scenes/components/", "res://scenes/components/UI/", "res://scenes/components/Health/", "res://art/characters/player/walk-weapon/")
+dock_filesystem_selected_paths=PackedStringArray("res://scenes/player/state_machine/Walk.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scenes/", "res://scenes/skeleton/", "res://scenes/player/", "res://scenes/player/state_machine/", "res://scenes/components/", "res://scenes/components/UI/", "res://scenes/components/Health/", "res://art/characters/player/walk-weapon/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -30,15 +30,15 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://scenes/test.tscn", "res://scenes/skeleton/skeleton.tscn", "res://scenes/player/player.tscn")
 center_split_offset=-372
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 current_scene="res://scenes/player/player.tscn"
 selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/player/state_machine/Attack.gd", "res://scenes/skeleton/Dead.gd", "res://scenes/skeleton/Hit.gd", "res://scenes/player/state_machine/Idle.gd", "res://scenes/player/player.gd", "res://scenes/player/state_machine/PlayerState.gd", "res://scenes/skeleton/skeleton.gd", "res://scripts/state_machine/state_machine.gd", "res://scenes/player/state_machine/Walk.gd"]
-selected_script="res://scenes/skeleton/Hit.gd"
-open_help=["Tween"]
+open_scripts=["res://scenes/skeleton/Attack.gd", "res://scenes/player/state_machine/Attack.gd", "res://scenes/player/Dead.gd", "res://scenes/components/Health/Health.gd", "res://scenes/components/UI/health_bar.gd", "res://scenes/skeleton/Hit.gd", "res://scenes/player/Hit.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/components/Hurtbox/Hurtbox.gd", "res://scenes/player/player.gd", "res://scenes/skeleton/skeleton.gd"]
+selected_script="res://scenes/player/player.gd"
+open_help=[]
 script_split_offset=150
 list_split_offset=0
 
