--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://art/map/props-pilar.png")
+dock_filesystem_selected_paths=PackedStringArray("res://art/map/map-v2.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scenes/", "res://scenes/skeleton/", "res://scenes/player/", "res://scenes/player/state_machine/", "res://scenes/components/", "res://scenes/components/UI/", "res://scenes/components/Health/", "res://art/", "res://art/map/", "res://art/characters/player/walk-weapon/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,16 +27,16 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player/player.tscn", "res://scenes/object/pillar.tscn")
+open_scenes=PackedStringArray("res://scenes/main.tscn", "res://scenes/player/player.tscn", "res://scenes/object/pillar.tscn", "res://scenes/skeleton/skeleton.tscn")
 center_split_offset=-372
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
-current_scene="res://scenes/main.tscn"
-selected_bottom_panel_item=0
+selected_main_editor_idx=2
+current_scene="res://scenes/player/player.tscn"
+selected_bottom_panel_item=9
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/skeleton/Attack.gd", "res://scenes/player/state_machine/Attack.gd", "res://scenes/player/Dead.gd", "res://scenes/components/Health/Health.gd", "res://scenes/components/UI/HealthBar.gd", "res://scenes/components/UI/health_bar.gd", "res://scenes/skeleton/Hit.gd", "res://scenes/player/Hit.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/components/Hurtbox/Hurtbox.gd", "res://scenes/player/state_machine/Idle.gd", "res://scenes/player/player.gd", "res://scenes/skeleton/skeleton.gd", "res://scenes/player/state_machine/Walk.gd"]
+open_scripts=["res://scenes/skeleton/Attack.gd", "res://scenes/player/state_machine/Attack.gd", "res://scenes/player/Dead.gd", "res://scenes/skeleton/Dead.gd", "res://scenes/components/Health/Health.gd", "res://scenes/components/UI/HealthBar.gd", "res://scenes/components/UI/health_bar.gd", "res://scenes/skeleton/Hit.gd", "res://scenes/player/Hit.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/components/Hurtbox/Hurtbox.gd", "res://scenes/player/state_machine/Idle.gd", "res://scenes/player/player.gd", "res://scenes/player/state_machine/PlayerStateMachine.gd", "res://scenes/skeleton/skeleton.gd", "res://scenes/skeleton/state_machine/SkeletonStateMachine.gd", "res://scripts/state_machine/state.gd", "res://scripts/state_machine/state_machine.gd", "res://scenes/player/state_machine/Walk.gd"]
 selected_script="res://scenes/player/player.gd"
 open_help=[]
 script_split_offset=150
