--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,12 +3,16 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 20,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 12,
+"selection_from_line": 5,
+"selection_to_column": 20,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -17,12 +21,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 11,
+"column": 33,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 46,
-"scroll_position": 0.0,
-"selection": false,
+"row": 42,
+"scroll_position": 9.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 42,
+"selection_to_column": 33,
+"selection_to_line": 42,
 "syntax_highlighter": "GDScript"
 }
 
@@ -31,10 +39,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 10,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -45,7 +53,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 29,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 12,
@@ -59,7 +67,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 22,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 4,
@@ -67,7 +75,7 @@ state={
 "selection": true,
 "selection_from_column": 4,
 "selection_from_line": 4,
-"selection_to_column": 13,
+"selection_to_column": 22,
 "selection_to_line": 4,
 "syntax_highlighter": "GDScript"
 }
@@ -105,12 +113,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 13,
+"row": 5,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 5,
+"selection_to_column": 16,
+"selection_to_line": 5,
 "syntax_highlighter": "GDScript"
 }
 
@@ -119,10 +131,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 10,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 9,
+"row": 7,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -136,7 +148,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 20,
+"row": 3,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -175,12 +187,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 11,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 11,
+"selection_to_column": 14,
+"selection_to_line": 11,
 "syntax_highlighter": "GDScript"
 }
 
@@ -217,7 +233,7 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 14,
@@ -234,7 +250,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([11]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 32,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -245,12 +261,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 30,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 6,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 6,
+"selection_to_column": 30,
+"selection_to_line": 6,
 "syntax_highlighter": "GDScript"
 }
 
@@ -315,16 +335,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 36,
+"row": 35,
 "scroll_position": 0.0,
 "selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 36,
+"selection_from_column": 6,
+"selection_from_line": 35,
+"selection_to_column": 22,
+"selection_to_line": 35,
 "syntax_highlighter": "GDScript"
 }
 
