--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -25,7 +25,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 42,
-"scroll_position": 9.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 16,
 "selection_from_line": 42,
@@ -39,11 +39,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 13,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 10,
-"scroll_position": 0.0,
+"row": 43,
+"scroll_position": 11.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -131,12 +131,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 10,
+"column": 1,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 7,
+"row": 25,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 25,
+"selection_to_column": 34,
+"selection_to_line": 25,
 "syntax_highlighter": "GDScript"
 }
 
@@ -148,7 +152,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
+"row": 13,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -173,10 +177,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 24,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
+"row": 18,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -205,12 +209,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 28,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 18,
-"scroll_position": 0.0,
-"selection": false,
+"row": 39,
+"scroll_position": 11.0,
+"selection": true,
+"selection_from_column": 2,
+"selection_from_line": 39,
+"selection_to_column": 28,
+"selection_to_line": 39,
 "syntax_highlighter": "GDScript"
 }
 
@@ -222,7 +230,7 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 14,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -233,12 +241,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 27,
+"column": 36,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 14,
+"row": 23,
 "scroll_position": 0.0,
-"selection": false,
+"selection": true,
+"selection_from_column": 1,
+"selection_from_line": 23,
+"selection_to_column": 36,
+"selection_to_line": 23,
 "syntax_highlighter": "GDScript"
 }
 
@@ -261,16 +273,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 30,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 6,
+"row": 17,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 6,
-"selection_to_column": 30,
-"selection_to_line": 6,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -283,7 +291,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 42,
-"scroll_position": 15.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -335,16 +343,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 6,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 35,
-"scroll_position": 0.0,
+"row": 7,
+"scroll_position": 1.0,
 "selection": true,
-"selection_from_column": 6,
-"selection_from_line": 35,
-"selection_to_column": 22,
-"selection_to_line": 35,
+"selection_from_column": 1,
+"selection_from_line": 7,
+"selection_to_column": 29,
+"selection_to_line": 7,
 "syntax_highlighter": "GDScript"
 }
 
@@ -385,7 +393,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 44,
-"scroll_position": 6.0,
+"scroll_position": 0.0,
 "selection": true,
 "selection_from_column": 6,
 "selection_from_line": 44,
@@ -413,10 +421,66 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 24,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scripts/global.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 12,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 4,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/skeleton/CollisionShape2D.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 5,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/test/test.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://scenes/level/level.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 6,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
