Fix: Distance in "z-axis" for attacks
Characters need to be in close position to their Y bottom in order to attack to hit. So characters in different "planes" doesn't hit.

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,25 +19,25 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://scenes/player/state_machine/Attack.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scenes/", "res://scenes/test/", "res://scenes/sword_skeleton/state_machine/", "res://scenes/spear_skeleton/state_machine/", "res://scenes/slime/state_machine/", "res://scenes/player/", "res://scenes/player/state_machine/", "res://scenes/level/", "res://scenes/components/", "res://scenes/components/Hitbox/", "res://scenes/components/Health/", "res://art/characters/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/state_machine/templates/Idle.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://scripts/state_machine/", "res://scripts/state_machine/templates/", "res://scenes/", "res://scenes/test/", "res://scenes/sword_skeleton/", "res://scenes/sword_skeleton/state_machine/", "res://scenes/spear_skeleton/state_machine/", "res://scenes/slime/state_machine/", "res://scenes/components/", "res://scenes/components/UI/", "res://art/characters/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/components/Hitbox/Hitbox.tscn")
+open_scenes=PackedStringArray("res://scenes/test/test.tscn", "res://scenes/sword_skeleton/sword_skeleton.tscn", "res://scripts/state_machine/templates/Idle.tscn")
 center_split_offset=-372
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-current_scene="res://scenes/components/Hitbox/Hitbox.tscn"
-selected_bottom_panel_item=0
+current_scene="res://scenes/sword_skeleton/sword_skeleton.tscn"
+selected_bottom_panel_item=1
 
 [ScriptEditor]
 
-open_scripts=["res://scenes/player/state_machine/Attack.gd", "res://scripts/global.gd", "res://scenes/components/Health/Health.gd", "res://scenes/components/Hitbox/Hitbox.gd", "res://scenes/level/level.gd", "res://scenes/player/player.gd", "res://scenes/slime/slime.gd", "res://scenes/spear_skeleton/spear_skeleton.gd", "res://scenes/sword_skeleton/sword_skeleton.gd", "res://scenes/test/test.gd"]
-selected_script="res://scenes/player/state_machine/Attack.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=243
 list_split_offset=0
