Update player movement functions

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -27,17 +27,18 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://scenes/test/test.tscn")
-current_scene="res://scenes/test/test.tscn"
+open_scenes=PackedStringArray("res://scenes/test/test.tscn", "res://scenes/characters/player/player.tscn")
+current_scene="res://scenes/characters/player/player.tscn"
 center_split_offset=-674
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://scripts/state_machine/templates/Dead.gd", "res://export_presets.cfg", "res://scenes/game_over_menu/game_over_menu.gd", "res://scripts/state_machine/templates/Hit.gd", "res://scenes/characters/player/state_machine/Idle.gd", "res://scenes/level/level.gd", "res://scenes/characters/player/state_machine/PlayerStateMachine.gd", "res://scenes/characters/shield_skeleton/shield_skeleton.gd", "res://scenes/characters/sword_skeleton/state_machine/SkeletonStateMachine.gd", "res://scenes/characters/slime/state_machine/SlimeStateMachine.gd", "res://scripts/state_machine/state.gd", "res://scenes/characters/shield_skeleton/state_machine/StateMachine.gd", "res://scripts/state_machine/state_machine.gd", "res://scenes/test/test.gd"]
-selected_script="res://scenes/test/test.gd"
-open_help=[]
+open_scripts=["res://scenes/characters/player/state_machine/Attack.gd", "res://scenes/characters/player/state_machine/Idle.gd", "res://scenes/characters/player/player.gd", "res://scenes/test/test.gd"]
+selected_script="res://scenes/characters/player/state_machine/Idle.gd"
+open_help=["Vector2"]
 script_split_offset=243
 list_split_offset=0
 
