Implement and use PreAttack for multiple attacks
* Adds some variables to decide next attack and position from PreAttack state
* Add some export variables to control range from Attack state
* Use it in Slime, Sword Skeleton and Spear Skeleton enemies
* Add a different attack from Slime, which is inherits from template Attack

--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -1,4 +1,10 @@
 list=Array[Dictionary]([{
+"base": &"State",
+"class": &"AttackTemplate",
+"icon": "",
+"language": &"GDScript",
+"path": "res://scripts/state_machine/templates/Attack.gd"
+}, {
 "base": &"RefCounted",
 "class": &"HealthUpdate",
 "icon": "",
@@ -64,12 +70,6 @@ list=Array[Dictionary]([{
 "icon": "",
 "language": &"GDScript",
 "path": "res://scenes/characters/spear_skeleton/state_machine/SpearSkelStateMachine.gd"
-}, {
-"base": &"CharacterBody2D",
-"class": &"SpearSkeleton",
-"icon": "",
-"language": &"GDScript",
-"path": "res://scenes/characters/spear_skeleton/spear_skeleton.gd"
 }, {
 "base": &"Node",
 "class": &"State",
